--- a/projeto/src/App.css
+++ b/projeto/src/App.css
@@ -49,6 +49,7 @@ button {
   border-radius: 10px;
   border: none;
   padding: 0.5rem;
+  background: #e9c3d1;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
